bk_ida/mcfida/c2/insert_new_arc
implicit.c:571:12: error: expected expression
*( _OWORD *)( ( char *)&a1->cost + v10) = *( _OWORD *)( ( char *)&a1->cost + v8); 
           ^
implicit.c:571:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&a1->cost + v10) = *( _OWORD *)( ( char *)&a1->cost + v8); 
   ^
implicit.c:571:54: error: expected expression
*( _OWORD *)( ( char *)&a1->cost + v10) = *( _OWORD *)( ( char *)&a1->cost + v8); 
                                                     ^
implicit.c:571:46: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&a1->cost + v10) = *( _OWORD *)( ( char *)&a1->cost + v8); 
                                             ^
4 errors generated.
